Temporarily run on push for testing
Revert this prior to merge.

--- a/.github/workflows/longevity_test.yml
+++ b/.github/workflows/longevity_test.yml
@@ -8,6 +8,10 @@ on:
       user:
         description: 'User to run longevity test on'
 
+  push:
+    branches:
+      - '3799-del-days'
+
 permissions:
   # required to retrieve AWS credentials
   id-token: write
