--- a/.github/workflows/longevity_test.yml
+++ b/.github/workflows/longevity_test.yml
@@ -28,8 +28,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # Need these in the local env so that corso can read them
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
       AZURE_CLIENT_ID: ${{ secrets[needs.SetM365App.outputs.client_id_env] }}
       AZURE_CLIENT_SECRET: ${{ secrets[needs.SetM365App.outputs.client_secret_env] }}
       AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
@@ -69,6 +67,15 @@ jobs:
       
       - run: mkdir ${CORSO_LOG_DIR}
 
+        # Use shorter-lived credentials obtained from assume-role since these
+        # runs haven't been taking long.
+      - name: Configure AWS credentials from Test account
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
+          role-session-name: integration-testing
+          aws-region: us-east-1
+
 ##########################################################################################################################################
 
 # Repository commands
@@ -86,7 +93,7 @@ jobs:
             --no-stats \
             --hide-progress \
             --prefix ${{ env.PREFIX }} \
-            --bucket ${{ secrets.CI_TESTS_S3_BUCKET }} \
+            --bucket ${{ secrets.CI_RETENTION_TESTS_S3_BUCKET }} \
             --succeed-if-exists \
             2>&1 | tee ${{ env.CORSO_LOG_DIR }}/gotest-repo-init.log
 
@@ -104,7 +111,7 @@ jobs:
             --no-stats \
             --hide-progress \
             --prefix ${{ env.PREFIX }} \
-            --bucket ${{ secrets.CI_TESTS_S3_BUCKET }} \
+            --bucket ${{ secrets.CI_RETENTION_TESTS_S3_BUCKET }} \
             2>&1 | tee ${{ env.CORSO_LOG_DIR }}/gotest-repo-connect.log
 
           if ! grep -q 'Connected to S3 bucket' ${{ env.CORSO_LOG_DIR }}/gotest-repo-connect.log
