--- a/.github/workflows/longevity_test.yml
+++ b/.github/workflows/longevity_test.yml
@@ -61,7 +61,13 @@ jobs:
         run: |
           echo version=$(git describe --tags --abbrev=0) | tee -a $GITHUB_OUTPUT
 
-      - run: git checkout ${{ steps.version.outputs.version }}
+      # Checkout the .github directory at the original branch's ref so we have a
+      # stable view of the actions.
+      - name: Code Checkout
+        working-directory: ${{ github.workspace }}
+        run: |
+          git checkout ${{ steps.version.outputs.version }}
+          git checkout ${{ github.ref }} -- .github
 
       - run: go build -o corso
       
@@ -342,7 +348,7 @@ jobs:
 
       - name: Notify failure in slack
         if: failure()
-        uses: ./.github/actions/slack-message@main
+        uses: ./.github/actions/slack-message
         with:
           msg: "[FAILED] Longevity Test"
           slack_url: ${{ secrets.SLACK_WEBHOOK_URL }}
