--- a/.github/workflows/longevity_test.yml
+++ b/.github/workflows/longevity_test.yml
@@ -340,8 +340,15 @@ jobs:
             # TODO(ashmrtn): We can also check that non-current versions of
             # blobs don't have their retention extended if we want.
             #
-            # Objects in S3 should have longer locking retention times now that
-            # we can explicitly check for.
+            # Assuming no failures during full maintenance, current versions of
+            # objects with the below versions should have retention times that
+            # are roughly (now + RETENTION_DURATION). We can explicitly check
+            # for this, but leave a little breathing room since maintenance may
+            # take some time to run.
+            #
+            # If we pick a live-retention-duration that is too small then we'll
+            # start seeing failures. The check for live objects is a lower bound
+            # check.
             #
             # Blob prefixes are as follows:
             #   - kopia.blobcfg - repo-wide config
