Increase nightly test timeout from 15m to 1h

--- a/.github/workflows/nightly_test.yml
+++ b/.github/workflows/nightly_test.yml
@@ -103,7 +103,7 @@ jobs:
           -v            \
           -failfast     \
           -p 1          \
-          -timeout 15m  \
+          -timeout 1h  \
           ./... 2>&1 | tee ./testlog/gotest-nightly.log | gotestfmt -hide successful-tests
 
 ##########################################################################################################################################
