--- a/.github/workflows/longevity_test.yml
+++ b/.github/workflows/longevity_test.yml
@@ -105,7 +105,7 @@ jobs:
             --no-stats \
             --hide-progress \
             --retention-mode ${{ env.RETENTION_MODE }} \
-            --retention-duration ${{ env.RETENTION_DURATION }} \
+            --retention-duration "${{ env.RETENTION_DURATION }}h" \
             --extend-retention \
             --prefix ${{ env.PREFIX }} \
             --bucket ${{ secrets.CI_RETENTION_TESTS_S3_BUCKET }} \
